Add checkpoint event + data-node API stuff
